fix: overflow-x bug

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ body {
   background-size: 33.33%;
   line-height: 1.5;
   cursor: url(./img/cursor.png), default;
+  overflow-x: hidden;
 }
 
   @media (min-width: 800px) {
@@ -107,7 +108,7 @@ h2 {
 .container {
   position: relative;
   min-height: 120vh;
-  max-width: 100%;
+  max-width: 100vw;
   margin: 4em 0;
 }
 
